crates/aven-check/tests/fixtures/check/valid/record-width-subtyping.av
value = { x: 1, y: 2 }
narrow : { x: Int } = value

nested = { outer: { x: 1, y: 2 } }
nestedNarrow : { outer: { x: Int } } = nested
