crates/aven-check/tests/fixtures/check/invalid/type-only-record-entry.av
value : { name: Int } = { name: 1, .. }
